; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_set_volume.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_set_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_photo_set_volume = type { i32, i32 }

@volumes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_volume(%struct.lev_photo_set_volume* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lev_photo_set_volume*, align 8
  %4 = alloca i32*, align 8
  store %struct.lev_photo_set_volume* %0, %struct.lev_photo_set_volume** %3, align 8
  %5 = load %struct.lev_photo_set_volume*, %struct.lev_photo_set_volume** %3, align 8
  %6 = getelementptr inbounds %struct.lev_photo_set_volume, %struct.lev_photo_set_volume* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32* @map_int_int_add(i32* @volumes, i32 %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.lev_photo_set_volume*, %struct.lev_photo_set_volume** %3, align 8
  %13 = getelementptr inbounds %struct.lev_photo_set_volume, %struct.lev_photo_set_volume* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32*, i32** %4, align 8
  store i32 %14, i32* %15, align 4
  store i32 1, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %11
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32* @map_int_int_add(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
